--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -1,3 +1,20 @@
 .logo {
   height: 5.2rem;
 }
+
+.parent {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.parent > span {
+  font-size: 2.5rem;
+  color: var(--color-light--2);
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+}
