--- a/src/components/Spinner.module.css
+++ b/src/components/Spinner.module.css
@@ -9,13 +9,13 @@
   width: 6rem;
   height: 6rem;
   border-radius: 50%;
-  background: conic-gradient(#0000 10%, var(--color-light--2));
+  background: conic-gradient(gray 5%, red);
   -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
   animation: rotate 1.5s infinite linear;
 }
 
 @keyframes rotate {
   to {
-    transform: rotate(1turn);
+    transform: rotate(0.5turn);
   }
 }
